# flow-core

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  cabin.toml
.github/workflows/: cmake.yml
benchmarks/: CMakeLists.txt  event_bench.cpp  graph_bench.cpp  indexable_name_bench.cpp  node_data_bench.cpp  type_name_bench.cpp  uuid_bench.cpp
cabin-out/debug/: Makefile
cmake/: FlowModule.cmake  flow-coreConfig.cmake.in
docs/: getting-started.md
include/flow/core/: Concepts.hpp  Connection.hpp  Connections.hpp  Core.hpp  Env.hpp  Event.hpp  FunctionNode.hpp  Graph.hpp  IndexableName.hpp  Log.hpp  Module.hpp  Node.hpp  NodeData.hpp  NodeFactory.hpp  Port.hpp  TypeConversion.hpp  TypeName.hpp  UUID.hpp
src/: Connection.cpp  Connections.cpp  Env.cpp  Graph.cpp  Log.cpp  Module.cpp  Node.cpp  NodeFactory.cpp  Port.cpp  TypeConversion.cpp  UUID.cpp  lib.cpp
tests/: CMakeLists.txt  factory_test.cpp  graph_test.cpp  indexable_name_test.cpp  module_test.cpp  node_test.cpp  test_module.flowmod  type_name_test.cpp
tests/test_module/: CMakeLists.txt  README.md  module.json
tests/test_module/src/: register.cpp
tools/: CMakeLists.txt
tools/module_manager/: CMakeLists.txt
tools/module_manager/src/: main.cpp
